--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import 'tailwindcss';
 :root {
   --text-color: red;
+  --blue-color: #438db8;
+  --white-color: #ffffff;
+}
+.montserrat {
+  font-family: 'Montserrat', sans-serif;
 }
 .text-color {
   color: var(--text-color);
+}
+.blue-color {
+  background-color: var(--blue-color);
+}
+
+.icon {
+  background-color: var(--white-color);
+  padding: 0.02rem 0.4rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
