--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import 'tailwindcss';
 :root {
   --text-color: red;
@@ -9,6 +10,9 @@
 }
 .montserrat {
   font-family: 'Montserrat', sans-serif;
+}
+.lato {
+  font-family: 'Lato', sans-serif;
 }
 .text-color {
   color: var(--text-color);
@@ -24,6 +28,9 @@
 }
 .white-color {
   background-color: var(--white-color);
+}
+.white-text {
+  color: var(--white-color);
 }
 
 .icon {
