--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --link-color: #666666;
   --background-color: #bebcbd;
   --body-color: #f9f9f9;
+  --overlay-color: #00000026;
 }
 body {
   background-color: var(--body-color);
@@ -42,6 +43,9 @@ body {
 }
 .background-color {
   background-color: var(--background-color);
+}
+.overlay-color {
+  background-color: var(--overlay-color);
 }
 .icon {
   background-color: var(--white-color);
