--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --overlay-text-color: #f6f6f6;
   --product-name-color: #3e3e3e;
   --discount-price-color: #bebcbd;
+  --border-color: #f5f5f5;
 }
 body {
   background-color: var(--body-color);
@@ -61,6 +62,9 @@ body {
 }
 .red-color {
   background-color: var(--red-color);
+}
+.border-color {
+  border-color: var(--border-color);
 }
 .icon {
   background-color: var(--white-color);
