--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --product-name-color: #3e3e3e;
   --discount-price-color: #bebcbd;
   --border-color: #f5f5f5;
+  --icon-background-color: #f6f6f6;
 }
 body {
   background-color: var(--body-color);
@@ -68,6 +69,14 @@ body {
 }
 .icon {
   background-color: var(--white-color);
+  padding: 0.02rem 0.4rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.icon-background-color {
+  background-color: var(--icon-background-color);
   padding: 0.02rem 0.4rem;
   border-radius: 50%;
   display: flex;
